[package]
name = "typst-lib-wrapper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_typst_fonts"]

# Automatically loads default typst fonts into [FontCache].
#
# https://github.com/typst/typst-assets
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed_typst_fonts = []

# Enables parallel PNG/SVG compilation using `rayon`.
# Calculates fonts cache size in parallalel.
#
# [On mixing `rayon` with `tokio`!](https://blog.dureuill.net/articles/dont-mix-rayon-tokio/)
parallel_compilation = ["dep:rayon"]


[dependencies]
chrono = "0.4.38"
comemo = "0.4.0"
dirs = "5.0.1"
ecow = "0.2.2"
flate2 = "1.0.30"
fontdb = { version = "0.20.0", features = ["std", "fs", "fontconfig"] }
parking_lot = { version = "^0.12.0" }
rayon = { version = "1.10.0", optional = true }
tar = "0.4.41"
thiserror = "1.0.61"
typst = "0.11.1"
typst-assets = { version = "0.11.1", features = ["fonts"] }
typst-pdf = "0.11.1"
typst-render = "0.11.1"
typst-svg = "0.11.1"
typst-syntax = "0.11.1"
ureq = { version = "2.10.0" }
