[package]
name = "typst-lib-wrapper"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_typst_fonts"]

# Automatically loads default typst fonts into [FontCache].
#
# https://github.com/typst/typst-assets
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed_typst_fonts = []

# Enables parallel PNG/SVG compilation using `rayon`.
# Calculates fonts cache size in parallalel.
#
# [On mixing `rayon` with `tokio`!](https://blog.dureuill.net/articles/dont-mix-rayon-tokio/)
parallel_compilation = ["dep:rayon"]


[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
ecow = "0.2.3"
flate2 = "1.0.34"
fontdb = { version = "0.23.0", features = ["std", "fs", "fontconfig"] }
parking_lot = { version = "^0.12.0" }
rayon = { version = "1.10.0", optional = true }
tar = "0.4.43"
thiserror = "2.0.3"
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-pdf = "0.12.0"
typst-render = "0.12.0"
typst-svg = "0.12.0"
typst-syntax = "0.12.0"
typst-utils = "0.12.0"
ureq = "2.10.1"
