[package]
name = "typst-lib-wrapper"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_typst_fonts"]

# Automatically loads default typst fonts into [FontCache].
#
# https://github.com/typst/typst-assets
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed_typst_fonts = []

# Enables parallel PNG/SVG compilation using `rayon`.
# Calculates fonts cache size in parallalel.
#
# [On mixing `rayon` with `tokio`!](https://blog.dureuill.net/articles/dont-mix-rayon-tokio/)
parallel_compilation = ["dep:rayon"]


[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
ecow = "0.2.3"
flate2 = "1.1.0"
fontdb = { version = "0.23.0", features = ["std", "fs", "fontconfig"] }
parking_lot = { version = "^0.12.0" }
rayon = { version = "1.10.0", optional = true }
tar = "0.4.44"
thiserror = "2.0.12"
typst = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-html = "0.13.1"
typst-pdf = "0.13.1"
typst-render = "0.13.1"
typst-svg = "0.13.1"
typst-syntax = "0.13.1"
typst-utils ="0.13.1"
ureq = "3.0.8"
